fix(DIST-1161): Fix height on mobile
fix(DIST-1161): Prettierize files

test(DIST-1161): Mock matchmedia in tests

fix(DIST-1161): Fix height on mobile, use css instead of js

--- a/packages/embed/src/css/popover.scss
+++ b/packages/embed/src/css/popover.scss
@@ -15,6 +15,8 @@
   right: 16px;
   z-index: 10001;
 
+
+
   &.open {
     max-width: 100%;
     min-height: 360px;
@@ -169,6 +171,7 @@
       bottom: 0;
       right: 0;
       @include fullsize;
+      max-height: -webkit-fill-available;
 
       .typeform-popover-close {
         display: block;
